# rag-42

./: Makefile  pyproject.toml
student/: __main__.py  answer.py  errors.py  generate.py  index.py  indexer.py  rag.py  validator.py
