[project]
name = "rag-42"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.3",
    "chromadb>=1.5.5",
    "dspy>=3.1.3",
    "fire>=0.7.1",
    "langchain>=1.2.13",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
    "uuid>=1.30",
]
