[project]
name = "rag-42"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "bm25s>=0.3.3",
    "chromadb>=1.5.5",
    "dotenv>=0.9.9",
    "dspy>=3.1.3",
    "dspy-ai>=3.1.3",
    "fire>=0.7.1",
    "langchain>=1.2.13",
    "langchain-text-splitters>=1.1.1",
    "pydantic>=2.12.5",
    "rank-bm25>=0.2.2",
    "sentence-transformers>=5.3.0",
    "torch>=2.11.0",
    "tqdm>=4.67.3",
    "transformers>=5.4.0",
    "uuid>=1.30",
]
